Fix spacing in logged out pages

--- a/sass/components/_homepage.scss
+++ b/sass/components/_homepage.scss
@@ -123,11 +123,8 @@
 	}
 }
 
-.not-logged-in {
-	.front .wwm-sanderson,
-	.panopoly-landing-page {
-		.row:not(:first-child) .panel-pane:not(:last-child) {
-			margin-bottom: 1em;
-		}
+.not-logged-in .panopoly-landing-page {
+	.row:not(:first-child) .panel-pane:not(:last-child) {
+		margin-bottom: 1em;
 	}
 }
